Fixes scroll jumping issue on interactive settings

--- a/src/webviews/apps/settings/settings.scss
+++ b/src/webviews/apps/settings/settings.scss
@@ -249,7 +249,7 @@ header {
 
 	.image__preview {
 		display: flex;
-		width: auto;
+		width: 100%;
 		margin-top: 1em;
 	}
 }
